--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">FunnyNumbers</string>
+    <string name="get_fact">Get Fact</string>
+    <string name="get_random_fact">get random fact</string>
+    <string name="input_a_number">input a number</string>
 </resources>
